// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-share> Component basic usage 1`] = `
<bolt-share size="medium"
            opacity="100"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-100">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="start"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <span class="c-bolt-share__label c-bolt-share__label--medium">
                  Share this page
                </span>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--facebook"
                   href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
                   target="_blank"
                >
                  <bolt-icon name="facebook-solid"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Facebook
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--twitter"
                   href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
                   target="_blank"
                >
                  <bolt-icon name="twitter"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Twitter
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--linkedin"
                   href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="linkedin"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    LinkedIn
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--email"
                   href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="email"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Email
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item">
                <bolt-copy-to-clipboard>
                  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
                    <button class="c-bolt-copy-to-clipboard__trigger"
                            data-clipboard-text="https://boltdesignsystem.com"
                    >
                      <span class="c-bolt-share__link">
                        <bolt-icon name="asset-link"
                                   size="medium"
                        >
                        </bolt-icon>
                        <span class="c-bolt-share__link-text">
                          Copy share link
                        </span>
                      </span>
                    </button>
                    <span class="c-bolt-copy-to-clipboard__transition">
                      <span class="c-bolt-share__link">
                        <bolt-icon class="c-bolt-share__copy-animation"
                                   name="refresh"
                                   size="medium"
                        >
                        </bolt-icon>
                      </span>
                    </span>
                    <span class="c-bolt-copy-to-clipboard__confirmation">
                      <div class="c-bolt-share__link">
                        <bolt-icon name="check"
                                   size="medium"
                        >
                        </bolt-icon>
                        <span class="c-bolt-share__link-text">
                          Copied!
                        </span>
                      </div>
                    </span>
                  </span>
                </bolt-copy-to-clipboard>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share align: center 1`] = `
<bolt-share size="medium"
            opacity="100"
            align="center"
>
  <div class="c-bolt-share c-bolt-share--opacity-100">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="center"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-center c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-center">
                <span class="c-bolt-share__label c-bolt-share__label--medium">
                  Share this page
                </span>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-center">
                <a class="c-bolt-share__link js-bolt-share__link--facebook"
                   href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
                   target="_blank"
                >
                  <bolt-icon name="facebook-solid"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Facebook
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-center">
                <a class="c-bolt-share__link js-bolt-share__link--twitter"
                   href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
                   target="_blank"
                >
                  <bolt-icon name="twitter"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Twitter
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-center">
                <a class="c-bolt-share__link js-bolt-share__link--linkedin"
                   href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="linkedin"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    LinkedIn
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-center c-bolt-list-item--last-item">
                <a class="c-bolt-share__link js-bolt-share__link--email"
                   href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="email"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Email
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share align: end 1`] = `
<bolt-share size="medium"
            opacity="100"
            align="end"
>
  <div class="c-bolt-share c-bolt-share--opacity-100">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="end"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-end c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-end">
                <span class="c-bolt-share__label c-bolt-share__label--medium">
                  Share this page
                </span>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-end">
                <a class="c-bolt-share__link js-bolt-share__link--facebook"
                   href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
                   target="_blank"
                >
                  <bolt-icon name="facebook-solid"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Facebook
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-end">
                <a class="c-bolt-share__link js-bolt-share__link--twitter"
                   href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
                   target="_blank"
                >
                  <bolt-icon name="twitter"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Twitter
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-end">
                <a class="c-bolt-share__link js-bolt-share__link--linkedin"
                   href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="linkedin"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    LinkedIn
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-end c-bolt-list-item--last-item">
                <a class="c-bolt-share__link js-bolt-share__link--email"
                   href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="email"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Email
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share align: start 1`] = `
<bolt-share size="medium"
            opacity="100"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-100">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="start"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <span class="c-bolt-share__label c-bolt-share__label--medium">
                  Share this page
                </span>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--facebook"
                   href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
                   target="_blank"
                >
                  <bolt-icon name="facebook-solid"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Facebook
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--twitter"
                   href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
                   target="_blank"
                >
                  <bolt-icon name="twitter"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Twitter
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--linkedin"
                   href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="linkedin"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    LinkedIn
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item">
                <a class="c-bolt-share__link js-bolt-share__link--email"
                   href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="email"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Email
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share opacity: 20 1`] = `
<bolt-share size="medium"
            opacity="20"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-20">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="start"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <span class="c-bolt-share__label c-bolt-share__label--medium">
                  Share this page
                </span>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--facebook"
                   href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
                   target="_blank"
                >
                  <bolt-icon name="facebook-solid"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Facebook
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--twitter"
                   href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
                   target="_blank"
                >
                  <bolt-icon name="twitter"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Twitter
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--linkedin"
                   href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="linkedin"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    LinkedIn
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item">
                <a class="c-bolt-share__link js-bolt-share__link--email"
                   href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="email"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Email
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share opacity: 40 1`] = `
<bolt-share size="medium"
            opacity="40"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-40">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="start"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <span class="c-bolt-share__label c-bolt-share__label--medium">
                  Share this page
                </span>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--facebook"
                   href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
                   target="_blank"
                >
                  <bolt-icon name="facebook-solid"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Facebook
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--twitter"
                   href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
                   target="_blank"
                >
                  <bolt-icon name="twitter"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Twitter
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--linkedin"
                   href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="linkedin"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    LinkedIn
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item">
                <a class="c-bolt-share__link js-bolt-share__link--email"
                   href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="email"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Email
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share opacity: 60 1`] = `
<bolt-share size="medium"
            opacity="60"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-60">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="start"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <span class="c-bolt-share__label c-bolt-share__label--medium">
                  Share this page
                </span>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--facebook"
                   href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
                   target="_blank"
                >
                  <bolt-icon name="facebook-solid"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Facebook
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--twitter"
                   href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
                   target="_blank"
                >
                  <bolt-icon name="twitter"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Twitter
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--linkedin"
                   href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="linkedin"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    LinkedIn
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item">
                <a class="c-bolt-share__link js-bolt-share__link--email"
                   href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="email"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Email
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share opacity: 80 1`] = `
<bolt-share size="medium"
            opacity="80"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-80">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="start"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <span class="c-bolt-share__label c-bolt-share__label--medium">
                  Share this page
                </span>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--facebook"
                   href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
                   target="_blank"
                >
                  <bolt-icon name="facebook-solid"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Facebook
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--twitter"
                   href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
                   target="_blank"
                >
                  <bolt-icon name="twitter"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Twitter
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--linkedin"
                   href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="linkedin"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    LinkedIn
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item">
                <a class="c-bolt-share__link js-bolt-share__link--email"
                   href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="email"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Email
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share opacity: 100 1`] = `
<bolt-share size="medium"
            opacity="100"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-100">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="start"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <span class="c-bolt-share__label c-bolt-share__label--medium">
                  Share this page
                </span>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--facebook"
                   href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
                   target="_blank"
                >
                  <bolt-icon name="facebook-solid"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Facebook
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--twitter"
                   href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
                   target="_blank"
                >
                  <bolt-icon name="twitter"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Twitter
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--linkedin"
                   href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="linkedin"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    LinkedIn
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item">
                <a class="c-bolt-share__link js-bolt-share__link--email"
                   href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="email"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Email
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share size: medium 1`] = `
<bolt-share size="medium"
            opacity="100"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-100">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="start"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <span class="c-bolt-share__label c-bolt-share__label--medium">
                  Share this page
                </span>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--facebook"
                   href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
                   target="_blank"
                >
                  <bolt-icon name="facebook-solid"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Facebook
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--twitter"
                   href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
                   target="_blank"
                >
                  <bolt-icon name="twitter"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Twitter
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--linkedin"
                   href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="linkedin"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    LinkedIn
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item">
                <a class="c-bolt-share__link js-bolt-share__link--email"
                   href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="email"
                             size="medium"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Email
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share size: small 1`] = `
<bolt-share size="small"
            opacity="100"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-100">
    <bolt-list tag="ul"
               display="inline"
               spacing="xsmall"
               separator="none"
               align="start"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
                <span class="c-bolt-share__label c-bolt-share__label--small">
                  Share this page
                </span>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--facebook"
                   href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
                   target="_blank"
                >
                  <bolt-icon name="facebook-solid"
                             size="small"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Facebook
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--twitter"
                   href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
                   target="_blank"
                >
                  <bolt-icon name="twitter"
                             size="small"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Twitter
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--linkedin"
                   href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="linkedin"
                             size="small"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    LinkedIn
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
                <a class="c-bolt-share__link js-bolt-share__link--email"
                   href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="email"
                             size="small"
                  >
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Email
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </div>
</bolt-share>
`;
